--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@trpc/server": "^10.9.0",
     "@upstash/ratelimit": "^0.4.0",
     "@upstash/redis": "^1.20.1",
+    "csstype": "^3.0.10",
     "dayjs": "^1.11.7",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
