--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: pnpm/actions/checkout@v2
+      with:
+        version: 6.0.2
 
     - name: Install Dependencies
       run: pnpm install
