--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: pnpm/actions/checkout@v2
+    - uses: pnpm/actions/setup-pnpm@v1
       with:
         version: 6.0.2
 
