--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "acme",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "packageManager": "pnpm@7.30.3",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
